--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -3,7 +3,7 @@ import "../styles/base.css";
 // component import
 import Footer from "@components/Footer.astro";
 import MainHead from "@components/MainHead.astro";
-import Nav from "@components/Nav.astro";
+import Nav from "@components/NavHome.astro";
 import SkipLinks from "@components/SkipLinks.astro";
 
 const {
