--- a/src/components/views/home/DefaultView.astro
+++ b/src/components/views/home/DefaultView.astro
@@ -2,8 +2,9 @@
 import SimpleMardownRender from "@components/SimpleMardownRender.astro";
 import MDXImage from "@components/mdx/MDXImage.astro";
 import homeData from "@data/homeData.json";
-import siteData from "@data/siteData.json";
+import Gallery from "./Gallery.astro";
 import OffreCard from "./OffreCard.astro";
+import TestimonialSlider from "./TestimonialSlider.astro";
 const props = Astro.props;
 ---
 
@@ -56,7 +57,7 @@ const props = Astro.props;
         </a>
       </div>
     </div>
-    <!-- <p>{JSON.stringify(homeData, null, 2)}</p> -->
-    <!-- <p>{JSON.stringify(siteData, null, 2)}</p> -->
   </section>
+  <TestimonialSlider testimonials={homeData.testimonial} />
+  <Gallery gallery={homeData.gallery} />
 </>
