--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -68,7 +68,7 @@
   .section {
     @apply py-[2.95rem];
     .container-in-section {
-      @apply container mx-auto flex flex-col items-center gap-5;
+      @apply container mx-auto flex max-w-screen-xl flex-col items-center gap-5;
     }
     .markdown {
       @apply mx-auto w-[80%] whitespace-pre-line;
@@ -92,6 +92,25 @@
     &::after {
       @apply absolute -bottom-2 -right-2 z-10 h-[40%] w-[15%] bg-primary;
       content: "";
+    }
+  }
+  .testimonial {
+    --ng-width: 430px;
+    @apply container mx-auto grid max-w-screen-xl gap-5;
+    .testimonial-container {
+      @apply mb-14 !auto-cols-[var(--ng-width)] gap-1;
+    }
+    .testimonial__card {
+      @apply flex min-w-[var(--ng-width)] bg-primary p-5;
+    }
+    .testimonial__content {
+      @apply flex flex-col items-center justify-between gap-4;
+      .testimonial__text {
+        @apply text-center;
+      }
+      .testimonial__author {
+        @apply text-neutre-content inline-block w-fit flex-none bg-neutre px-4 py-2 text-center text-[0.84211rems] transition-all;
+      }
     }
   }
 }
