--- a/src/components/NavHome.astro
+++ b/src/components/NavHome.astro
@@ -33,6 +33,7 @@ const { homeData } = Astro.props;
 ---
 
 <header
+  id="top"
   class="relative z-10 flex h-[27.21053rem] items-center justify-center bg-primary"
 >
   <div class="z-20 flex flex-col items-center justify-center gap-10">
