--- a/src/components/views/home/Gallery.astro
+++ b/src/components/views/home/Gallery.astro
@@ -11,7 +11,7 @@ const props = Astro.props;
 ---
 
 <section class="section">
-  <div class="container-in-section !flex-row flex-wrap !gap-1">
+  <div class="container-in-section flex-container !flex-row flex-wrap !gap-1">
     {
       props.gallery.map((image) => (
         <MDXImage
