--- a/src/components/NavHome.astro
+++ b/src/components/NavHome.astro
@@ -11,7 +11,7 @@ import SimpleMardownRender from "./SimpleMardownRender.astro";
 
 const navDesignClasses: NavClassConfig = {
   navRoot:
-    "container mx-auto max-w-screen-xl z-20 flex flex-wrap items-center justify-end",
+    "container mx-auto max-w-screen-xl z-20 flex flex-wrap items-center justify-end py-[1.47rem]",
   ulList:
     "mb-0 text-[1.4375rem] my-4 hidden md:flex flex-col flex-wrap items-start justify-center gap-2 p-4 font-medium md:mt-0 md:flex-row md:space-x-8 md:p-0 lg:items-center rtl:space-x-reverse",
   menu: {
@@ -50,7 +50,7 @@ const { homeData } = Astro.props;
       classes="strongiswhite text-center max-w-[48.9375rem] *:text-hero-home"
     />
   </div>
-  <div class="absolute right-0 top-2 z-20 w-full">
+  <div class="absolute right-0 top-0 z-20 w-full">
     <NavRoot
       menuName="Principal"
       navDesignConfig={navDesignClasses}
