--- a/src/pages/equipe.astro
+++ b/src/pages/equipe.astro
@@ -1,5 +1,8 @@
 ---
-
+import EquipeView from "@components/views/equipe/EquipeView.astro";
+import SecondaryLayout from "@layouts/SecondaryLayout.astro";
 ---
 
-<div>Astro - Equipe</div>
+<SecondaryLayout>
+  <EquipeView />
+</SecondaryLayout>
