--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -44,7 +44,7 @@ const navDesignClass: NavClassConfig = {
               name={network.icon}
               width={45}
               height={45}
-              class={`h-[45px] w-[45px]`}
+              class={`h-[45px] w-[45px] transition-colors duration-300 hover:text-red-600`}
             />
           </a>
         ))
