--- a/src/pages/complices.astro
+++ b/src/pages/complices.astro
@@ -1,5 +1,8 @@
 ---
-
+import CompliceView from "@components/views/complices/CompliceView.astro";
+import SecondaryLayout from "@layouts/SecondaryLayout.astro";
 ---
 
-<div>Astro - Complices</div>
+<SecondaryLayout>
+  <CompliceView />
+</SecondaryLayout>
