--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,5 +1,8 @@
 ---
-
+import ContactView from "@components/views/contact/ContactView.astro";
+import SecondaryLayout from "@layouts/SecondaryLayout.astro";
 ---
 
-<div>Astro - Contact</div>
+<SecondaryLayout>
+  <ContactView />
+</SecondaryLayout>
