--- a/src/components/tinacms/TinaViewer.astro
+++ b/src/components/tinacms/TinaViewer.astro
@@ -7,6 +7,7 @@ type Props = {
   response?: any;
   Content: any;
   displayTitle?: string;
+  displayBG?: string;
   useProse?: boolean;
 };
 const {
@@ -14,6 +15,7 @@ const {
   response,
   Content,
   displayTitle = undefined,
+  displayBG = undefined,
   useProse = false,
 } = Astro.props;
 ---
@@ -21,7 +23,7 @@ const {
 {
   response.data ? (
     <TinaHelper client:tina client:only tina={response} entry={entry}>
-      {displayTitle && <Hero title={displayTitle} />}
+      {displayTitle && <Hero title={displayTitle} image={displayBG} />}
       <slot name="before" />
       {Content && (
         <section
@@ -38,7 +40,7 @@ const {
     </TinaHelper>
   ) : (
     <>
-      {displayTitle && <Hero title={displayTitle} />}
+      {displayTitle && <Hero title={displayTitle} image={displayBG} />}
       <slot name="before" />
       {Content && (
         <section
