--- a/src/components/views/home/Gallery.astro
+++ b/src/components/views/home/Gallery.astro
@@ -10,7 +10,7 @@ type Props = {
 const props = Astro.props;
 ---
 
-<section class="section">
+<section class="section !py-[1.8rem]">
   <div class="container-in-section flex-container !flex-row flex-wrap !gap-1">
     {
       props.gallery.map((image) => (
