--- a/src/components/views/home/TestimonialSlider.astro
+++ b/src/components/views/home/TestimonialSlider.astro
@@ -11,7 +11,7 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
 );
 ---
 
-<section class="testimonial relative" data-slide-motion="static">
+<section class="testimonial relative !py-[3.91rem]" data-slide-motion="static">
   <div
     class="testimonial-container grid touch-manipulation snap-x snap-mandatory grid-flow-col overflow-auto overflow-x-hidden overflow-y-hidden scroll-smooth"
     data-slide-container=""
