--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -12,7 +12,7 @@ const navDesignClasses: NavClassConfig = {
   navRoot:
     "container mx-auto max-w-screen-xl z-20 flex flex-wrap items-center justify-between py-[1.47rem]",
   ulList:
-    "mb-0 text-[1.4375rem] my-4 hidden md:flex flex-col flex-wrap items-start justify-center gap-2 p-4 font-medium md:mt-0 md:flex-row md:space-x-8 md:p-0 lg:items-center rtl:space-x-reverse",
+    "mb-0 text-[1.4375rem] my-4 hidden md:flex flex-col flex-wrap items-start justify-center gap-2 p-4 font-medium md:mt-0 md:flex-row md:p-0 lg:items-center",
   menu: {
     button: "btn btn-primary",
     ulList:
