--- a/src/components/views/complices/CompliceCard.astro
+++ b/src/components/views/complices/CompliceCard.astro
@@ -53,8 +53,8 @@ const { src, alt } = image || {};
           </svg>
         )}
       </div>
-      <div>
-        <h2>
+      <div class="flex flex-col gap-2">
+        <h2 class="text-[1.47368rem]">
           {url ? (
             <a
               href={url}
