--- a/src/components/views/equipe/EquipeView.astro
+++ b/src/components/views/equipe/EquipeView.astro
@@ -9,7 +9,9 @@ const props = Astro.props;
 <>
   <Hero title={teamData.equipe.title} image={teamData.equipe.hero_bg} />
   <section class="section">
-    <div class="container-in-section flex-container divide-y-2 divide-black/50">
+    <div
+      class="container-in-section flex-container !max-w-[80%] divide-y-2 divide-black/50"
+    >
       {teamData.members.map((member, idx) => <EquipeCard {...member} {idx} />)}
     </div>
   </section>
