--- a/src/components/views/home/HomeView.astro
+++ b/src/components/views/home/HomeView.astro
@@ -9,15 +9,21 @@ const props = Astro.props;
 ---
 
 <>
-  <section class="section">
-    <div class="container-in-section flex-container">
-      <h1 class="text-h1-home">{homeData.intro_title}</h1>
-      <p class="markdown">{homeData.intro_text}</p>
+  <section class="section !py-0">
+    <div
+      class="container-in-section flex-container !my-0 !gap-[1.89rem] !py-[2.95rem]"
+    >
+      <h1 class="font-mesmerize text-h1-home">{homeData.intro_title}</h1>
+      <p class="markdown text-center text-[1.31579rem]">
+        {homeData.intro_text}
+      </p>
     </div>
   </section>
-  <section class="section gris-1">
-    <div class="container-in-section flex-container">
-      <h2 class="title-box home">{homeData.intro_offre}</h2>
+  <section class="section gris-1 !py-0">
+    <div
+      class="container-in-section flex-container !gap-[3.21rem] !py-[1.84rem]"
+    >
+      <h2 class="title-box home mb-0">{homeData.intro_offre}</h2>
       <div class="grid grid-cols-4 gap-1">
         {
           homeData.offres.map((offre, idex) => {
@@ -27,17 +33,23 @@ const props = Astro.props;
       </div>
     </div>
   </section>
-  <section class="section">
-    <div class="container-in-section flex-container">
-      <h2 class="title-box home">{homeData.principe_title}</h2>
-      <SimpleMardownRender
-        markdown={homeData.principe_sub_title}
-        classes="markdown *:text-h2-sub"
-      />
-      <SimpleMardownRender
-        markdown={homeData.principe_text}
-        classes="markdown"
-      />
+  <section class="section !py-0">
+    <div
+      class="container-in-section flex-container !gap-[2.74rem] !py-[2.95rem]"
+    >
+      <h2 class="title-box home !mb-0 w-fit flex-none">
+        {homeData.principe_title}
+      </h2>
+      <div class="flex flex-col items-center gap-1">
+        <SimpleMardownRender
+          markdown={homeData.principe_sub_title}
+          classes="markdown *:text-h2-sub !leading-none"
+        />
+        <SimpleMardownRender
+          markdown={homeData.principe_text}
+          classes="markdown px-4"
+        />
+      </div>
     </div>
     <div class="container-in-section flex-container !flex-row">
       <MDXImage
